fixed issues with box shadows in .mein-menu-wrap

--- a/home-work-3/style.css
+++ b/home-work-3/style.css
@@ -137,6 +137,7 @@ body {
 .main-menu-wrap {
     -moz-box-shadow: 0px 2px 6px 1px rgba(0,0,0,0.25);
     -webkit-box-shadow: 0px 2px 6px 1px rgba(0,0,0,0.25);
+    box-shadow: 0px 2px 6px 1px rgba(0,0,0,0.25);
     background-color: #323232;
     display: table;
     width: 100%;
